# OpenCLDemo

./: .gitignore  CMakeLists.txt  HelloWorld_Kernel.cl  LICENSE  main.cpp  tool.cpp  tool.h
